add pictures from sparql

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
 
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/applicatie-filmliefhebbers.js"></script>
+    <script src="/js/collectie.js"></script>
+    
 
     {{content-for "body-footer"}}
   </body>
